# vision

./: cv.md  detect.md  官方库中的二维码类.md
Mine/: CMakeLists.txt  Maybe.md  Maybe2.md  qr_detection_node.cpp  qr_detector.cpp  qr_detector.h
camera_com/: CMakeLists.txt  package.xml
camera_com/launch/: gesture_to_photo.launch
camera_com/scripts/: take_photo.py
opencv_cpp_yolov5/: LICENSE  README.md
opencv_cpp_yolov5/src/opencv_cpp_yolov5/: CMakeLists.txt  package.xml
opencv_cpp_yolov5/src/opencv_cpp_yolov5/launch/: hough_circle_detector.launch  opencv_cpp_yolov5.launch  qrcode_detector.launch  usb_cam.launch  usb_cam_down.launch  usb_cam_front.launch  video_stream.launch
opencv_cpp_yolov5/src/opencv_cpp_yolov5/msg/: BoundingBoxResNet.msg  BoundingBoxesResNet.msg  BoxCenter.msg  CircleDetectResult.msg  CircleInfo.msg  QrcodingBoxes.msg
opencv_cpp_yolov5/src/opencv_cpp_yolov5/shell/: all.sh
opencv_cpp_yolov5/src/opencv_cpp_yolov5/src/: hough_circle_detector.cpp  opencv_cpp_yolov5.cpp  qrcode_detector.cpp  video_stream.cpp  yolo_detector.cpp  yolo_detector.h
opencv_cpp_yolov5/src/vision_opencv/cv_bridge/: CMakeLists.txt
opencv_cpp_yolov5/src/vision_opencv/cv_bridge/src/: module.hpp
opencv_cpp_yolov5/src/vision_opencv/image_geometry/: CMakeLists.txt
